--- a/index.html
+++ b/index.html
@@ -17,6 +17,63 @@
         />
     </head>
     <body>
-        
+        <svg
+            id="Layer_1"
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            width="600"
+            height="339"
+            viewBox="0 0 600 339"
+        >
+            <clipPath id="text-path">
+                <path
+                    d="M59,143.09H23.49V66.85H57.81c15.53,0,24.76,7.72,24.76,19.77,0,9.23-5.54,15.2-12.92,17.38a18.48,18.48,0,0,1,14.66,18.35C84.31,135,75.08,143.09,59,143.09ZM54.23,81.73H42.06v16H54.23c6.08,0,9.44-2.72,9.44-7.93S60.31,81.73,54.23,81.73Zm1.3,29.54H42.06V128.1H55.75c6.19,0,9.77-2.82,9.77-8.25S61.72,111.27,55.53,111.27Z"
+                />
+                <path
+                    d="M141.75,81.73H113.63V97.15H138.5v14.34H113.63v16.72h28.12v14.88H95.06V66.85h46.69Z"
+                />
+                <path
+                    d="M201.27,129.62H172.81l-4.56,13.47H148.81L176.4,66.85h21.5l27.58,76.24H205.83ZM187,87.38l-9.34,27.91h18.79Z"
+                />
+                <path
+                    d="M233.52,66.85h18.57v45.62c0,9,4.45,14.22,13.25,14.22s13.46-5.21,13.46-14.22V66.85h18.58v45.51c0,21.06-14.77,31.49-32.37,31.49s-31.49-10.43-31.49-31.49Z"
+                />
+                <path
+                    d="M306.28,66.85h59V81.73h-20.2v61.36H326.48V81.73h-20.2Z"
+                />
+                <path d="M374.59,66.85h18.57v76.24H374.59Z" />
+                <path
+                    d="M406.62,66.85h49.63V81.73H425.19V97.81h23.24v14.44H425.19v30.84H406.62Z"
+                />
+                <path
+                    d="M465.7,66.85h18.57v45.62c0,9,4.45,14.22,13.25,14.22S511,121.48,511,112.47V66.85h18.56v45.51c0,21.06-14.76,31.49-32.36,31.49s-31.49-10.43-31.49-31.49Z"
+                />
+                <path d="M561.16,66.85v61.9h24.32v14.34H542.59V66.85Z" />
+                <path
+                    d="M56.52,275.94c-19,0-33.87-9.45-34.5-27.33H44.94c.63,6.8,4.91,10.07,11,10.07,6.3,0,10.33-3.14,10.33-8.31,0-16.37-44.2-7.55-43.95-38.91,0-16.75,13.73-26.07,32.24-26.07,19.27,0,32.24,9.57,33.12,26.45H64.33c-.38-5.67-4.41-9.07-10.2-9.19-5.16-.13-9.07,2.51-9.07,8.06,0,15.36,43.7,8.43,43.7,38C88.76,263.6,77.18,275.94,56.52,275.94Z"
+                />
+                <path
+                    d="M142.78,185.64c21,0,36.9,11.84,41.94,31H161c-3.65-7.55-10.32-11.33-18.51-11.33-13.22,0-22.29,9.82-22.29,25.44s9.07,25.44,22.29,25.44c8.19,0,14.86-3.78,18.51-11.34h23.68c-5,19.14-20.91,30.86-41.94,30.86-26.06,0-44.45-18.52-44.45-45S116.72,185.64,142.78,185.64Z"
+                />
+                <path
+                    d="M252.09,203.9H219.47v17.89h28.84v16.62H219.47V257.8h32.62v17.26H197.94V186.65h54.15Z"
+                />
+                <path
+                    d="M345.15,186.65v88.41H323.62l-36-54.53v54.53H266.07V186.65H287.6l36,54.78V186.65Z"
+                />
+                <path
+                    d="M414.91,203.9H382.3v17.89h28.84v16.62H382.3V257.8h32.61v17.26H360.76V186.65h54.15Z"
+                />
+                <path
+                    d="M465,186.65c21.66,0,32.49,12.47,32.49,27.83,0,11.08-6,21.54-19.64,25.57l20.4,35H474l-18.38-33.38h-5.17v33.38H428.89V186.65Zm-1.26,17.88H450.42v21.92h13.35c8.06,0,11.84-4.16,11.84-11.09C475.61,208.82,471.83,204.53,463.77,204.53Z"
+                />
+                <path
+                    d="M504.07,186.65H528.5l17.12,37,17-37H586.8l-30.6,59.19v29.22H534.67V245.84Z"
+                />
+            </clipPath>
+        </svg>
+        <div class="container">
+            <video src="./video/video.mp4" autoplay muted loop></video>
+        </div>
     </body>
 </html>
